--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -22,7 +22,7 @@
 
 <!--Main layout-->
 <main style="margin-top: 58px;">
-    <div class="container pt-4"></div>
+    <div class="container pt-4"> bun venit</div>
 </main>
 <!--Main layout-->
 
