--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,7 +19,7 @@
                     <div class="card-body p-4 p-md-5">
                         <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Register</h3>
 
-                        <form action="/register/{{id}}/submit" method="post" name="userCompany">
+                        <form action="/register/{{id}}/submit" method="post" name="userApp">
 
                             <div class="row">
                                 <div class="col-md-6 mb-4">
