--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,14 +1,23 @@
 <link rel="stylesheet" href="../../../static/style/main-navbar-style.css">
 
-{{#userCompany}}
+{{#userApp}}
 <!-- Navbar -->
 <nav id="main-navbar" class="navbar navbar-expand-lg  bg-white fixed-top">
     <!-- Container wrapper -->
     <div class="container-fluid">
+        {{#isUserCompany}}
         <a href="/dashboard-company/{{id}}">
-        <img src="../../../static/images/logo.jpeg"
-             class="image">
+            <img src="../../../static/images/logo.jpeg"
+                 class="image">
         </a>
+        {{/isUserCompany}}
+        {{^isUserCompany}}
+        <a href="/dashboard/{{id}}">
+            <img src="../../../static/images/logo.jpeg"
+                 class="image">
+        </a>
+        {{/isUserCompany}}
+
         &nbsp;&nbsp;&nbsp;
 
         <!-- Search form -->
@@ -43,10 +52,11 @@
             <!-- Avatar -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle d-flex align-items-center"
-                   id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown" >
+                   id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown">
                     {{firstName}} {{lastName}}
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+                    {{#isUserCompany}}
                     <li>
                         <a class="dropdown-item btn-outline-secondary" href="/user-profile/{{id}}">
                             <i class="far fa-user-circle"></i>&nbsp; My profile</a>
@@ -55,13 +65,14 @@
                         <a class="dropdown-item btn-outline-secondary" href="/profile/{{id}}">
                             <i class="far fa-building"></i>&nbsp; Company profile</a>
                     </li>
+                    {{/isUserCompany}}
                     <li>
                         <a class="dropdown-item btn-outline-secondary" href="/main-page">
                             <i class="fa fa-sign-out"></i>&nbsp;Logout </a>
                     </li>
                 </ul>
             </li>
-            {{/userCompany}}
+            {{/userApp}}
         </ul>
     </div>
     <!-- Container wrapper -->
