--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -3,12 +3,17 @@
 <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="position-sticky">
         <div class="list-group list-group-flush mx-3 mt-4">
-            {{^isUserCompany}}
+            {{#isCandidate}}
             <a href="/dashboard/{{id}}" class="list-group-item list-group-item-action ripple
         {{#dashboardActive}}active{{/dashboardActive}}" aria-current="true">
                 <i class="fas fa-chart-line fa-fw me-3"></i><span>Dashboard</span>
             </a>
-            {{/isUserCompany}}
+
+            <a href="/resume/{{id}}" class="list-group-item list-group-item-action ripple
+        {{#resumeActive}}active{{/resumeActive}}" aria-current="true">
+                <i class="far fa-file-alt fa-fw me-3"></i><span>Resume</span>
+            </a>
+            {{/isCandidate}}
 
             {{#isUserCompany}}
             <a href="/dashboard-company/{{id}}" class="list-group-item list-group-item-action ripple
@@ -20,7 +25,7 @@
         {{#jobs-companyActive}}active{{/jobs-companyActive}}" aria-current="true">
                 <i class="fas fa-briefcase fa-fw me-3"></i><span>Jobs company</span>
             </a>
-            {{^isDecider}}
+            {{#isDecider}}
             <a href="/announcement/{{id}}" class="list-group-item list-group-item-action py-2 ripple
         {{#announcementActive}}active{{/announcementActive}}">
                 <i class="fa-solid fa-list-ul fa-fw me-3"></i><span>Announcement</span>
