--- a/src/main/resources/templates/resume.html
+++ b/src/main/resources/templates/resume.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="../../static/style/navigation-style.css">
     <link rel="stylesheet" href="../static/style/resume-style.css">
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Datepicker Plugin -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.11.0/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.11.0/dist/js/bootstrap-datepicker.min.js"></script>
+
+
     <!-- Page style -->
 
 </head>
@@ -292,8 +300,7 @@
                                                     <input type="date"
                                                            id="endDate"
                                                            name="endDate"
-                                                           class="form-control"
-                                                           required/>
+                                                           class="form-control"/>
                                                 </div>
                                             </div>
                                         </div>
@@ -338,7 +345,7 @@
                     {{#workExperiences}}
                     <div class="container-fluid pt-3">
                         <div class="col-10">
-                            <div>{{companyName}}</div>
+                            <div><b>{{companyName}}</b></div>
                             <button type="button" class="btn btn-primary btn-sm mb-2" data-mdb-toggle="modal"
                                     data-mdb-target="#editWorkExperience{{id}}">
                                 <i class="fa-regular fa-pen-to-square"></i>&nbsp;Update
@@ -375,11 +382,8 @@
                                                     <div class="col-5">
                                                         <div class="mb-3">
                                                             <label class="form-label" for="startDate{{id}}">Period</label>
-                                                            <input type="date" value="{{startDate}}"
-                                                                   id="startDate{{id}}"
-                                                                   name="startDate"
-                                                                   class="form-control"
-                                                                   required/>
+                                                            <input type="date" id="startDate{{id}}" name="startDate"
+                                                                   class="form-control" required value="{{startDate}}"/>
                                                         </div>
                                                     </div>
                                                     <div class="col-1">
@@ -392,8 +396,7 @@
                                                             <input type="date" value="{{endDate}}"
                                                                    id="endDate{{id}}"
                                                                    name="endDate"
-                                                                   class="form-control"
-                                                                   required/>
+                                                                   class="form-control"/>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -501,7 +504,7 @@
                             data-mdb-toggle="modal" data-mdb-target="#addCertification">
                         <i class="fa-solid fa-plus"></i>&nbsp;&nbsp;Add
                     </button>
-                    <div class="modal modal-lg fade" id="addCertification" tabindex="-1" role="dialog"
+                    <div class="modal modal-sm fade" id="addCertification" tabindex="-1" role="dialog"
                          aria-labelledby="addCertificationTitle" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
@@ -515,7 +518,7 @@
 
                                     <div class="mymodal">
                                         <div class="row">
-                                            <div class="col-11">
+                                            <div class="col-5">
                                                 <div class="mb-3">
                                                     <label class="form-label" for="name">Name</label>
                                                     <input type="text"
@@ -529,24 +532,10 @@
                                         <div class="row">
                                             <div class="col-5">
                                                 <div class="mb-3">
-                                                    <label class="form-label" for="startDateC">Period</label>
-                                                    <input type="date"
-                                                           id="startDateC"
-                                                           name="startDate"
-                                                           class="form-control"
-                                                           required/>
-                                                </div>
-                                            </div>
-                                            <div class="col-1">
-                                                <div class="mb-3" style="margin-top: 85%; margin-left: 50%">
-                                                    -
-                                                </div>
-                                            </div>
-                                            <div class="col-5">
-                                                <div style="margin-top: 11%; ">
-                                                    <input type="date"
-                                                           id="endDateC"
-                                                           name="endDate"
+                                                    <label class="form-label" for="year">Year</label>
+                                                    <input type="text"
+                                                           id="year"
+                                                           name="year"
                                                            class="form-control"
                                                            required/>
                                                 </div>
@@ -568,7 +557,7 @@
                     {{#certification}}
                     <div class="container-fluid pt-3">
                         <div class="col-10">
-                            <div>{{Name}}</div>
+                            <div><b>{{Name}}</b></div>
                             <button type="button" class="btn btn-primary btn-sm mb-2" data-mdb-toggle="modal"
                                     data-mdb-target="#editCertification{{id}}">
                                 <i class="fa-regular fa-pen-to-square"></i>&nbsp;Update
@@ -577,7 +566,7 @@
                                     data-mdb-target="#deleteCertification{{id}}">
                                 <i class="fa-regular fa-trash-can"></i>&nbsp;Delete
                             </button>
-                            <div class="modal modal-lg fade" id="editCertification{{id}}" tabindex="-1" role="dialog"
+                            <div class="modal modal-sm fade" id="editCertification{{id}}" tabindex="-1" role="dialog"
                                  aria-labelledby="editCertification{{id}}" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered" role="document">
                                     <div class="modal-content">
@@ -602,29 +591,13 @@
                                                     </div>
                                                 </div>
                                                 <div class="row">
-                                                    <div class="col-5">
-                                                        <div class="mb-3">
-                                                            <label class="form-label" for="startDateC{{id}}">Period</label>
-                                                            <input type="date" value="{{startDate}}"
-                                                                   id="startDateC{{id}}"
-                                                                   name="startDate"
-                                                                   class="form-control"
-                                                                   required/>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-1">
-                                                        <div class="mb-3" style="margin-top: 85%; margin-left: 50%">
-                                                            -
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-5">
-                                                        <div style="margin-top: 11%; ">
-                                                            <input type="date" value="{{endDate}}"
-                                                                   id="endDateC{{id}}"
-                                                                   name="endDate"
-                                                                   class="form-control"
-                                                                   required/>
-                                                        </div>
+                                                    <div class="mb-3">
+                                                        <label class="form-label" for="year{{id}}">Year</label>
+                                                        <input type="text" value="{{year}}"
+                                                               id="year{{id}}"
+                                                               name="year"
+                                                               class="form-control"
+                                                               required/>
                                                     </div>
                                                 </div>
                                                 <br>
@@ -670,10 +643,10 @@
                             <table class="table table-bordered table-sm">
                                 <tr>
                                     <td>
-                                        Period
+                                        Year
                                     </td>
                                     <td>
-                                        {{startDate}} - {{endDate}}
+                                        {{year}}
                                     </td>
                                 </tr>
                             </table>
@@ -748,8 +721,7 @@
                                                     <input type="date"
                                                            id="endDateE"
                                                            name="endDate"
-                                                           class="form-control"
-                                                           required/>
+                                                           class="form-control"/>
                                                 </div>
                                             </div>
                                         </div>
@@ -781,7 +753,7 @@
                     {{#education}}
                     <div class="container-fluid pt-3">
                         <div class="col-10">
-                            <div>{{Degree}}</div>
+                            <div><b>{{Degree}}</b></div>
                             <button type="button" class="btn btn-primary btn-sm mb-2" data-mdb-toggle="modal"
                                     data-mdb-target="#editEducation{{id}}">
                                 <i class="fa-regular fa-pen-to-square"></i>&nbsp;Update
@@ -846,8 +818,7 @@
                                                             <input type="date" value="{{endDate}}"
                                                                    id="endDateE{{id}}"
                                                                    name="endDate"
-                                                                   class="form-control"
-                                                                   required/>
+                                                                   class="form-control"/>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -935,8 +906,12 @@
             </div>
         </div>
     </div>
+    {{#errors}}
+    <script>alert("End date must be after start date!")</script>
+    {{/errors}}
 </main>
 </body>
+
 <script>
     document.getElementById("fileInput").addEventListener("change", function () {
         var fileName = this.value.split("\\").pop();
