--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -13,6 +13,11 @@
         {{#resumeActive}}active{{/resumeActive}}" aria-current="true">
                 <i class="far fa-file-alt fa-fw me-3"></i><span>Resume</span>
             </a>
+
+            <a href="/my-applications/{{id}}" class="list-group-item list-group-item-action ripple
+        {{#resumeActive}}active{{/resumeActive}}" aria-current="true">
+                <i class="fas fa-list fa-fw me-3"></i><span>My applications</span>
+            </a>
             {{/isCandidate}}
 
             {{#isUserCompany}}
