--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -78,9 +78,9 @@
                                 </div>
                             </div>
                             <p class="resume-title"><b>{{jobName}}</b></p>
-                            <span class="companyName"><i class="fas fa-building"></i>&nbsp;{{companyName}}</span>
+                            <span class="smaller"><i class="fas fa-building"></i>&nbsp;{{companyName}}</span>
                             <span class="companyAddress" data-city="{{companyCity}}"><i class="fas fa-map-marker-alt"></i>&nbsp; {{companyCity}}</span>
-                            <span class="a-job"><i class="fas fa-briefcase"></i>&nbsp;{{jobType}}, {{jobLevel}}</span>
+                            <span class="a-job smaller"><i class="fas fa-briefcase"></i>&nbsp;{{jobType}}, {{jobLevel}}</span>
                             <a type="button" href="/announcement-info/{{userApp.id}}/{{id}}"
                                class="btn btn-primary btn-sm mt-4 px-2" style="width: 55%;">
                                 <i class="fas fa-poll-h"></i>&nbsp; Show more
